--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
   "dependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
+    "babel-plugin-react-transform": "^3.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babelify": "^8.0.0",
     "css-loader": "^0.28.11",
     "html-webpack-plugin": "^3.1.0",
-    "node-sass": "^4.7.2",
+    "node-sass": "^4.8.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-transform-hmr": "^1.0.4",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
     "webpack": "^4.2.0",
